--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@
 # without any warranty.
 
 AUTOMAKE_OPTIONS 	= subdir-objects
-AM_CFLAGS 		= $(gtk_CFLAGS) $(glib_CFLAGS) $(cairo_CFLAGS) $(rsvg_CFLAGS) $(libusb_CFLAGS)
+AM_CFLAGS 		= $(gtk_CFLAGS) $(glib_CFLAGS) $(cairo_CFLAGS) $(rsvg_CFLAGS) $(libusb_CFLAGS) -std=gnu99
 bin_PROGRAMS 		= inklingreader
 inklingreader_SOURCES 	= src/main.c src/gui/mainwindow.c src/gui/mainwindow.h \
 			  src/converters/svg.c src/converters/svg.h \
@@ -19,7 +19,9 @@ inklingreader_SOURCES 	= src/main.c src/gui/mainwindow.c src/gui/mainwindow.h \
 			  src/usb/online-mode.h src/usb/online-mode.c \
 			  src/datatypes/coordinate.h src/datatypes/clock.h \
 			  src/datatypes/element.h src/datatypes/metadata.h \
-			  src/datatypes/pressure.h src/datatypes/stroke.h src/datatypes/tilt.h
+			  src/datatypes/pressure.h src/datatypes/stroke.h src/datatypes/tilt.h \
+              src/datatypes/inklingOSC.h src/osc_broadcaster/osc_broadcaster.c \
+              src/libraries/tinyosc/tinyosc.c src/constants.h
 
 inklingreader_LDADD 	= $(gtk_LIBS) $(glib_LIBS) $(cairo_LIBS) $(rsvg_LIBS) $(libusb_LIBS)
 
@@ -29,6 +31,64 @@ else
 inklingreader_LDADD    += -lshell32
 inklingreader_LDFLAGS   = -mwindows
 endif
+
+###############################
+#Code for compiling HIDAPI
+ACLOCAL_AMFLAGS = -I src/libraries/hidapi/m4
+
+SUBDIRS=
+
+#if OS_LINUX
+#SUBDIRS += linux libusb
+#endif
+
+if OS_DARWIN
+SUBDIRS += src/libraries/hidapi/mac
+AM_CFLAGS += -framework CoreFoundation -framework IOKit
+inklingreader_SOURCES += src/libraries/hidapi/hidapi/hidapi.h src/libraries/hidapi/mac/hid.c
+endif
+
+EXTRA_DIST = udev doxygen
+
+dist_doc_DATA = \
+ src/libraries/hidapi/README.txt \
+ src/libraries/hidapi/AUTHORS.txt \
+ src/libraries/hidapi/LICENSE-bsd.txt \
+ src/libraries/hidapi/LICENSE-gpl3.txt \
+ src/libraries/hidapi/LICENSE-orig.txt \
+ src/libraries/hidapi/LICENSE.txt
+
+SCMCLEAN_TARGETS= \
+ src/libraries/hidapi/aclocal.m4 \
+ src/libraries/hidapi/config.guess \
+ src/libraries/hidapi/config.sub \
+ src/libraries/hidapi/configure \
+ src/libraries/hidapi/config.h.in \
+ src/libraries/hidapi/depcomp \
+ src/libraries/hidapi/install-sh \
+ src/libraries/hidapi/ltmain.sh \
+ src/libraries/hidapi/missing \
+ src/libraries/hidapi/mac/Makefile.in \
+ src/libraries/hidapi/testgui/Makefile.in \
+ src/libraries/hidapi/libusb/Makefile.in \
+ src/libraries/hidapi/Makefile.in \
+ src/libraries/hidapi/linux/Makefile.in \
+ src/libraries/hidapi/windows/Makefile.in \
+ src/libraries/hidapi/m4/libtool.m4 \
+ src/libraries/hidapi/m4/lt~obsolete.m4 \
+ src/libraries/hidapi/m4/ltoptions.m4 \
+ src/libraries/hidapi/m4/ltsugar.m4 \
+ src/libraries/hidapi/m4/ltversion.m4
+
+SCMCLEAN_DIR_TARGETS = \
+ autom4te.cache
+
+scm-clean: distclean
+	rm -f $(SCMCLEAN_TARGETS)
+	rm -Rf $(SCMCLEAN_DIR_TARGETS)
+###############################
+
+
 
 if ENABLE_GCOV_OPTION
 AM_CFLAGS	       += -fprofile-arcs -ftest-coverage
